Fix action registration
ActionProviderServiceAdapter#registerImplementation was
calling DOMActionProviderService#registerActionImplementation
with empty set of supported action identifiers (instances).

Thus registration was not completed and action invocation
was failing.

We have fixed this by creating an DOMActionInstance instance
with registering action type and action parent path.

// FIXME: this needs a bit more work

JIRA: MDSAL-679
Change-Id: I53a8977365166228ed30130519a2024372d89365
Signed-off-by: PeterSuna <Peter.Suna@pantheon.tech>
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>